areas alignment fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5089,6 +5089,9 @@ input[type=checkbox].custom-checkbox:before {
   max-width: 33.33%;
   margin-top: 0.5em;
 }
+.verification-modal .areas-select__selection li .area-errors li {
+  max-width: 100%;
+}
 .verification-modal .areas-select__selection .fnb-select {
   font-size: 1em;
   border-color: #adadad;
