--- a/public/less/theme/_single-view.less
+++ b/public/less/theme/_single-view.less
@@ -2416,6 +2416,11 @@
 	    		flex: 1 0 33.33%;
 	    		max-width: 33.33%;
 	    		margin-top: 0.5em;
+	    		.area-errors{
+					li{
+						max-width: 100%;
+					}
+				}
 	    	}
 	    	.fnb-select{
 	    		font-size: 1em;
